* (Bug 23241) Remove License selector, because it is not used when uploading a
  new version.
* (bug 23240) Add ID to namespace selector form on Special:Watchlist
* The pipe | character in urls is now escaped.
* (bug 23422) mp3 files can now be moved
* (bug 23448) MediaWiki:Summary-preview is now displayed instead of
  MediaWiki:Subject-preview when previewing summary

=== API changes in 1.17 ===
* (bug 22738) Allow filtering by action type on query=logevent
* (bug 22764) uselang parameter for action=parse
* (bug 22944) API: watchlist options are inconsistent
* (bug 22339) "Go" result should be available through the API
* (bug 22868) don't list infinite block expiry date as "now" in API logevents
* (bug 22290) prop=revisions now outputs "comment" field even when comment
  is empty, for consistency with list=recentchanges
* (bug 19721) API action=help should have a way to just list for a specific module
* (bug 23458) Add support for pageid parameter to action=parse requests
* (bug 23460) Parse action should have a section option
* (bug 21346) Make deleted images searchable by hash

=== Languages updated in 1.17 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Latgalian (ltg) (new)
* Rusyn (rue) (new)

* (bug 23156) Commafy and search normalization updated for Belarusian
  (Taraškievica)
* (bug 23283) Native name for Old English -> Ænglisc
* (bug 23364) Native name for Azerbaijani -> Azərbaycanca

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.
